parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ID
    IF
    LE
    PP
    WHILE

Grammar

Rule 0     S' -> E
Rule 1     E -> E + T
Rule 2     E -> T
Rule 3     T -> T * F
Rule 4     T -> F
Rule 5     F -> ( E )
Rule 6     F -> INT

Terminals, with rules where they appear

(                    : 5
)                    : 5
*                    : 3
+                    : 1
ID                   : 
IF                   : 
INT                  : 6
LE                   : 
PP                   : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

E                    : 1 5 0
F                    : 3 4
T                    : 1 2 3

Parsing method: LALR

state 0

    (0) S' -> . E
    (1) E -> . E + T
    (2) E -> . T
    (3) T -> . T * F
    (4) T -> . F
    (5) F -> . ( E )
    (6) F -> . INT

    (               shift and go to state 4
    INT             shift and go to state 5

    E                              shift and go to state 1
    T                              shift and go to state 2
    F                              shift and go to state 3

state 1

    (0) S' -> E .
    (1) E -> E . + T

    +               shift and go to state 6


state 2

    (2) E -> T .
    (3) T -> T . * F

    +               reduce using rule 2 (E -> T .)
    $end            reduce using rule 2 (E -> T .)
    )               reduce using rule 2 (E -> T .)
    *               shift and go to state 7


state 3

    (4) T -> F .

    *               reduce using rule 4 (T -> F .)
    +               reduce using rule 4 (T -> F .)
    $end            reduce using rule 4 (T -> F .)
    )               reduce using rule 4 (T -> F .)


state 4

    (5) F -> ( . E )
    (1) E -> . E + T
    (2) E -> . T
    (3) T -> . T * F
    (4) T -> . F
    (5) F -> . ( E )
    (6) F -> . INT

    (               shift and go to state 4
    INT             shift and go to state 5

    E                              shift and go to state 8
    T                              shift and go to state 2
    F                              shift and go to state 3

state 5

    (6) F -> INT .

    *               reduce using rule 6 (F -> INT .)
    +               reduce using rule 6 (F -> INT .)
    $end            reduce using rule 6 (F -> INT .)
    )               reduce using rule 6 (F -> INT .)


state 6

    (1) E -> E + . T
    (3) T -> . T * F
    (4) T -> . F
    (5) F -> . ( E )
    (6) F -> . INT

    (               shift and go to state 4
    INT             shift and go to state 5

    T                              shift and go to state 9
    F                              shift and go to state 3

state 7

    (3) T -> T * . F
    (5) F -> . ( E )
    (6) F -> . INT

    (               shift and go to state 4
    INT             shift and go to state 5

    F                              shift and go to state 10

state 8

    (5) F -> ( E . )
    (1) E -> E . + T

    )               shift and go to state 11
    +               shift and go to state 6


state 9

    (1) E -> E + T .
    (3) T -> T . * F

    +               reduce using rule 1 (E -> E + T .)
    $end            reduce using rule 1 (E -> E + T .)
    )               reduce using rule 1 (E -> E + T .)
    *               shift and go to state 7


state 10

    (3) T -> T * F .

    *               reduce using rule 3 (T -> T * F .)
    +               reduce using rule 3 (T -> T * F .)
    $end            reduce using rule 3 (T -> T * F .)
    )               reduce using rule 3 (T -> T * F .)


state 11

    (5) F -> ( E ) .

    *               reduce using rule 5 (F -> ( E ) .)
    +               reduce using rule 5 (F -> ( E ) .)
    $end            reduce using rule 5 (F -> ( E ) .)
    )               reduce using rule 5 (F -> ( E ) .)

